force-app/main/default/objects/Lead/fields/LPCR_IndiquezNousVosBesoins__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IndiquezNousVosBesoins__c</fullName>
    <label>Indiquez-nous vos besoins</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Réservez des places en crèches privées pour vos salariés</fullName>
            </value>
            <value>
                <fullName>Créer une crèche d’entreprise dédiée</fullName>
            </value>
            <value>
                <fullName>Simuler un devis et connaitre mes avantages fiscaux</fullName>
            </value>
            <value>
                <fullName>Se renseigner sur le dispositif crèches</fullName>
            </value>
            <value>
                <fullName>Lancer un appel d’offre</fullName>
            </value>
            <value>
                <fullName>Réaliser un audit social</fullName>
            </value>
            <value>
                <fullName>Être rappelé sous 48h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>