force-app/main/default/objects/Lead/fields/LPCR_Jeudi1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Jeudi1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeudi enfant 1</label>
    <type>Checkbox</type>
</CustomField>