force-app/main/default/objects/Lead/fields/LPCR_Jeudi2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Jeudi2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeudi enfant 2</label>
    <type>Checkbox</type>
</CustomField>