force-app/main/default/objects/Lead/fields/LPCR_Jeudi3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Jeudi3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeudi enfant 3</label>
    <type>Checkbox</type>
</CustomField>