force-app/main/default/objects/Lead/fields/LPCR_JoursDeGardeSouhaitesEnfant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_JoursDeGardeSouhaitesEnfant1__c</fullName>
    <label>Jours de garde souhaités Enfant 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value> 
                <fullName>Lundi</fullName>
            </value>
            <value>
                <fullName>Mardi</fullName>
            </value>
            <value>
                <fullName>Mercredi</fullName>
            </value>
            <value>
                <fullName>Jeudi</fullName>
            </value>
            <value>
                <fullName>Vendredi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>