force-app/main/default/objects/Lead/fields/LPCR_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LastActivityDate__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dernière activité</label>
    <type>Date</type>
</CustomField>