force-app/main/default/objects/Lead/fields/LPCR_LeadFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LeadFamille__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Famille à l&#39;origine de la création d&#39;un lead entreprises</description>
    <label>Lead Famille</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads Entreprise</relationshipLabel>
    <relationshipName>LeadsEntreprise</relationshipName>
    <type>Lookup</type>
</CustomField>