force-app/main/default/objects/Lead/fields/LPCR_LeadsTousLesMercredis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LeadsTousLesMercredis__c</fullName>
    <formula>IF(AND(INCLUDES(LPCR_JoursDeGardeSouhaitesEnfant1__c, &quot;Mercredi&quot;), TEXT(LeadSource) = &quot;Site Internet Grandir&quot;, TEXT(LPCR_TypePrestation__c)= &quot;Régulier&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads Tous les Mercredis</label>
    <type>Checkbox</type>
</CustomField>