force-app/main/default/objects/Lead/fields/LPCR_LibelleAPE__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LibelleAPE__c</fullName>
    <label>Libellé APE</label>
    <length>64</length>
    <type>Text</type>
</CustomField>