force-app/main/default/objects/Lead/fields/LPCR_ListeAttente__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ListeAttente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liste d&apos;attente</label>
    <type>Checkbox</type>
</CustomField>