force-app/main/default/objects/Lead/fields/LPCR_Lundi1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Lundi1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lundi enfant 1</label>
    <type>Checkbox</type>
</CustomField>