force-app/main/default/objects/Lead/fields/LPCR_Lundi2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Lundi2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lundi enfant 2</label>
    <type>Checkbox</type>
</CustomField>