force-app/main/default/objects/Lead/fields/LPCR_Lundi3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Lundi3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lundi enfant 3</label>
    <type>Checkbox</type>
</CustomField>