force-app/main/default/objects/Lead/fields/LPCR_ManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ManagerEmail__c</fullName>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>