force-app/main/default/objects/Lead/fields/LPCR_Mardi1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Mardi1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mardi enfant 1</label>
    <type>Checkbox</type>
</CustomField>