force-app/main/default/objects/Lead/fields/LPCR_Mardi2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Mardi2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mardi enfant 2</label>
    <type>Checkbox</type>
</CustomField>