force-app/main/default/objects/Lead/fields/LPCR_Mardi3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Mardi3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mardi enfant 3</label>
    <type>Checkbox</type>
</CustomField>