force-app/main/default/objects/Lead/fields/LPCR_Mercredi1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Mercredi1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mercredi enfant 1</label>
    <type>Checkbox</type>
</CustomField>