force-app/main/default/objects/Lead/fields/LPCR_Mercredi2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Mercredi2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mercredi enfant 2</label>
    <type>Checkbox</type>
</CustomField>