force-app/main/default/objects/Lead/fields/LPCR_Mercredi3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Mercredi3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mercredi enfant 3</label>
    <type>Checkbox</type>
</CustomField>