force-app/main/default/objects/Lead/fields/LPCR_MotifDisqualification__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifDisqualification__c</fullName>
    <label>Motif de disqualification du lead</label>
    <type>TextArea</type>
</CustomField>