force-app/main/default/objects/Lead/fields/LPCR_MotifNoncandidature__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifNoncandidature__c</fullName>
    <label>Motif de non candidature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>