force-app/main/default/objects/Lead/fields/LPCR_MotifTransfert__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifTransfert__c</fullName>
    <label>Motif de transfert</label>
    <type>TextArea</type>
</CustomField>