force-app/main/default/objects/Lead/fields/LPCR_NoFlowTrigger__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NoFlowTrigger__c</fullName>
    <formula>Today() &gt; LPCR_DateLimiteCommerce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPCR_NoFlowTrigger</label>
    <type>Checkbox</type>
</CustomField>