force-app/main/default/objects/Lead/fields/LPCR_NombreJourEnfant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreJourEnfant1__c</fullName>
    <label>Nombre de jours enfant 1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>