force-app/main/default/objects/Lead/fields/LPCR_NombrePlaceAchete__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombrePlaceAchete__c</fullName>
    <label>Nombre de places achetées</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>