force-app/main/default/objects/Lead/fields/LPCR_NombrePlaceVendue__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombrePlaceVendue__c</fullName>
    <label>Nombre de places vendues</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>