force-app/main/default/objects/Lead/fields/LPCR_NomCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomCoDemandeur__c</fullName>
    <label>Nom co-demandeur</label>
    <length>64</length>
    <type>Text</type>
</CustomField>