force-app/main/default/objects/Lead/fields/LPCR_NomCreche1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomCreche1__c</fullName>
    <label>Nom crèche 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>