force-app/main/default/objects/Lead/fields/LPCR_NomCreche2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomCreche2__c</fullName>
    <label>Nom crèche 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>