force-app/main/default/objects/Lead/fields/LPCR_NomCreche3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomCreche3__c</fullName>
    <label>Nom crèche 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>