force-app/main/default/objects/Lead/fields/LPCR_NomEnfant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomEnfant1__c</fullName>
    <label>Nom enfant 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>