force-app/main/default/objects/Lead/fields/LPCR_NomEnfant2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomEnfant2__c</fullName>
    <label>Nom enfant 2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>