force-app/main/default/objects/Lead/fields/LPCR_NomEnfant3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomEnfant3__c</fullName>
    <label>Nom enfant 3</label>
    <length>64</length>
    <type>Text</type>
</CustomField>