force-app/main/default/objects/Lead/fields/LPCR_NomOrigine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomOrigine__c</fullName>
    <label>Nom (origine du lead)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>