force-app/main/default/objects/Lead/fields/LPCR_NomSociete__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomSociete__c</fullName>
    <description>Champ technique servant à afficher un nom cliquable sur la vue de liste pour les Leads Entreprise</description>
    <formula>HYPERLINK(&quot;/&quot;+Id, Company)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom société</label>
    <type>Text</type>
</CustomField>