force-app/main/default/objects/Lead/fields/LPCR_ObjetMessage__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ObjetMessage__c</fullName>
    <label>Objet du message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>