force-app/main/default/objects/Lead/fields/LPCR_PardotRecordType__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PardotRecordType__c</fullName>
    <label>PARDOT RecordType Lead</label>
    <length>80</length>
    <type>Text</type>
</CustomField>