force-app/main/default/objects/Lead/fields/LPCR_PasActivite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PasActivite__c</fullName>
    <formula>IF(ISPICKVAL(Status, &quot;Nouveau&quot;),True,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pas d&apos;activité</label>
    <type>Checkbox</type>
</CustomField>