force-app/main/default/objects/Lead/fields/LPCR_PasDActivite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PasDActivite__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DEL Pas d&apos;activité</label>
    <type>Checkbox</type>
</CustomField>