force-app/main/default/objects/Lead/fields/LPCR_PasDeSIRET__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PasDeSIRET__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher cette case si l&#39;entreprise n&#39;a pas de numéro de SIRET</inlineHelpText>
    <label>Pas de SIRET</label>
    <type>Checkbox</type>
</CustomField>