force-app/main/default/objects/Lead/fields/LPCR_PrenomCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrenomCoDemandeur__c</fullName>
    <label>Prénom co-demandeur</label>
    <length>64</length>
    <type>Text</type>
</CustomField>