force-app/main/default/objects/Lead/fields/LPCR_PrenomEnfant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrenomEnfant1__c</fullName>
    <label>Prénom enfant 1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>