force-app/main/default/objects/Lead/fields/LPCR_PrenomEnfant2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrenomEnfant2__c</fullName>
    <label>Prénom enfant 2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>