force-app/main/default/objects/Lead/fields/LPCR_PrenomEnfant3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrenomEnfant3__c</fullName>
    <label>Prénom enfant 3</label>
    <length>64</length>
    <type>Text</type>
</CustomField>