force-app/main/default/objects/Lead/fields/LPCR_PrestataireActuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrestataireActuel__c</fullName>
    <label>Prestataire actuel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Babilou</fullName>
            </value>
            <value>
                <fullName>Crèche attitude</fullName>
            </value>
            <value>
                <fullName>Crèches de France</fullName>
            </value>
            <value>
                <fullName>La maison bleue</fullName>
            </value>
            <value>
                <fullName>Ma place en crèche</fullName>
            </value>
            <value>
                <fullName>People and baby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>