force-app/main/default/objects/Lead/fields/LPCR_PrivePublic__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrivePublic__c</fullName>
    <label>Privé / Public</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Privé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>