force-app/main/default/objects/Lead/fields/LPCR_ProfessionCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ProfessionCoDemandeur__c</fullName>
    <description>Profession du représentant 2 (cas du lead Famille)</description>
    <label>Profession Co-demandeur</label>
    <length>128</length>
    <type>Text</type>
</CustomField>