force-app/main/default/objects/Lead/fields/LPCR_ProfilLead__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ProfilLead__c</fullName>
    <label>Profil du lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demandeur gérant d&#39;entreprise</fullName>
            </value>
            <value>
                <fullName>Cadre supérieur non décisionnaire</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>