force-app/main/default/objects/Lead/fields/LPCR_RaisonDuPartenariat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RaisonDuPartenariat__c</fullName>
    <label>Raison du partenariat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acheter des places</fullName>
            </value>
            <value>
                <fullName>Vendre des places</fullName>
            </value>
            <value>
                <fullName>Vendre son réseau</fullName>
            </value>
            <value>
                <fullName>Accéder à notre offre de formation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>