force-app/main/default/objects/Lead/fields/LPCR_RaisonSociale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RaisonSociale__c</fullName>
    <label>Raison sociale</label>
    <length>64</length>
    <type>Text</type>
</CustomField>