force-app/main/default/objects/Lead/fields/LPCR_RecordType__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RecordType__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPCR_RecordType</label>
    <type>Text</type>
</CustomField>