force-app/main/default/objects/Lead/fields/LPCR_Region__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Region__c</fullName>
    <label>Région</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PACA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>