force-app/main/default/objects/Lead/fields/LPCR_RegionComForm__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RegionComForm__c</fullName>
    <formula>IF(
ISNULL(TEXT(Owner:User.LPCR_RegionCommerciale__c )), &quot;Pas de région / utilisateur inactif&quot;,
TEXT(Owner:User.LPCR_RegionCommerciale__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Région Commerciale</label>
    <type>Text</type>
</CustomField>