force-app/main/default/objects/Lead/fields/LPCR_RegionComFormule__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RegionComFormule__c</fullName>
    <formula>IF(
ISNULL(TEXT(Owner:User.LPCR_RegionCommerciale__c)), &quot;Pas de région / utilisateur inactif&quot;,
TEXT(Owner:User.LPCR_RegionCommerciale__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Région commerciale</label>
    <type>Text</type>
</CustomField>