force-app/main/default/objects/Lead/fields/LPCR_RegionCommerciale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RegionCommerciale__c</fullName>
    <label>DEL Région commerciale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grand Est</fullName>
            </value>
            <value>
                <fullName>Grand Ouest</fullName>
            </value>
            <value>
                <fullName>Grand Sud</fullName>
            </value>
            <value>
                <fullName>IDF Nord</fullName>
            </value>
            <value>
                <fullName>IDF Sédentaires</fullName>
            </value>
            <value>
                <fullName>IDF Sud</fullName>
            </value>
            <value>
                <fullName>Rhone Alpes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>