force-app/main/default/objects/Lead/fields/LPCR_ReseauPartenaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ReseauPartenaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Réseau Partenaire</label>
    <type>Checkbox</type>
</CustomField>