force-app/main/default/objects/Lead/fields/LPCR_SecteurGeoGraphique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SecteurGeoGraphique__c</fullName>
    <label>Département</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Île de France</fullName>
            </value>
            <value>
                <fullName>Autres régions</fullName>
            </value>
            <value>
                <fullName>A l&apos;étranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>