force-app/main/default/objects/Lead/fields/LPCR_SIREN__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SIREN__c</fullName>
    <label>SIRET</label>
    <length>9</length>
    <type>Text</type>
</CustomField>