force-app/main/default/objects/Lead/fields/LPCR_SIRET__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SIRET__c</fullName>
    <label>SIRET</label>
    <length>14</length>
    <type>Text</type>
</CustomField>