force-app/main/default/objects/Lead/fields/LPCR_SocieteCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SocieteCoDemandeur__c</fullName>
    <label>Société co-demandeur</label>
    <length>64</length>
    <type>Text</type>
</CustomField>