force-app/main/default/objects/Lead/fields/LPCR_SousActivite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SousActivite__c</fullName>
    <label>Sous-activité</label>
    <length>64</length>
    <type>Text</type>
</CustomField>