force-app/main/default/objects/Lead/fields/LPCR_Sparklane_ProfileName__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Sparklane_ProfileName__c</fullName>
    <label>Nom Profil</label>
    <length>80</length>
    <type>Text</type>
</CustomField>