force-app/main/default/objects/Lead/fields/LPCR_TailleDelEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TailleDelEntreprise__c</fullName>
    <label>Taille de l&apos;entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profession Libérale</fullName>
            </value>
            <value>
                <fullName>Indépendant-Artisan</fullName>
            </value>
            <value>
                <fullName>PME-ETI</fullName>
            </value>
            <value>
                <fullName>Start-up</fullName>
            </value>
            <value>
                <fullName>Entreprise de plus de 4000 salariés</fullName>
            </value>
            <value>
                <fullName>Entreprise du CAC40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>