force-app/main/default/objects/Lead/fields/LPCR_TarifConcurrence__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TarifConcurrence__c</fullName>
    <label>Tarif concurrence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>