force-app/main/default/objects/Lead/fields/LPCR_Tech_BloqueConversion__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Tech_BloqueConversion__c</fullName>
    <defaultValue>true</defaultValue>
    <description>N&apos;autoriser la conversion qu&apos;à partir le bouton quick action &apos;convertir&apos;</description>
    <label>BloquerConversion</label>
    <type>Checkbox</type>
</CustomField>