force-app/main/default/objects/Lead/fields/LPCR_TelephoneCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TelephoneCoDemandeur__c</fullName>
    <label>Téléphone co-demandeur</label>
    <type>Phone</type>
</CustomField>