force-app/main/default/objects/Lead/fields/LPCR_TelephoneMobileCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TelephoneMobileCoDemandeur__c</fullName>
    <label>Téléphone mobile co-demandeur</label>
    <type>Phone</type>
</CustomField>